infrastructure/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: realworld
  labels:
    name: realworld
    environment: production
